added highscores to the end of quiz

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body{
     text-align: center;
 }
 
-.quiz-box{
+#quiz-box{
     padding: 50px;
     border-color: white;
     background-color: white;
